crates/uv/tests/it/snapshots/it__ecosystem__cibuildwheel-uv-lock-output.snap
---
source: crates/uv/tests/it/ecosystem.rs
expression: snapshot
---
exit_code: 0 (success)
----- stderr -----
Resolved 62 packages in [TIME]
