crates/uv/tests/it/snapshots/it__ecosystem__home-assistant-core-uv-lock-output.snap
---
source: crates/uv/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 98 packages in [TIME]
